# cstr-literal

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
tests/invalid/: null.rs  null.stderr  null_terminated.rs  null_terminated.stderr  with_null.rs  with_null.stderr
tests/valid/: empty.rs  simple.rs  with_const_format.rs  with_const_item_ref.rs
